deployment.yml
# Deployment definition for the sample-api application
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-api
  namespace: irwinrex
spec:
  replicas: 1  # Number of desired replicas
  selector:
    matchLabels:
      app: sample-pod  # Label selector for the pods
  template:
    metadata:
      labels:
        app: sample-pod  # Labels for the pods
        pod: sample-api  # Label for the pod
    spec:
      securityContext:
        runAsUser: 1000  # User ID to run the application
        runAsGroup: 1000  # Group ID to run the application
        fsGroup: 2000  # Group ID for file system permissions
      containers:
      - name: sample-api
        image: dockerrexxzz/sampleapi:latest  # Replace with your Docker image name and tag
        imagePullPolicy: Always
        resources:
          limits:
            memory: "256Mi"  # Adjust the memory limit as per your requirements
            cpu: "256m"       # Adjust the CPU limit as per your requirements
          requests:
            memory: "125Mi"
            cpu: "100m"
        ports:
          - name: sample-pod-port
            containerPort: 7000  # Application port
        readinessProbe:
          httpGet:
            path: /healthcheck # Health check path
            port: 7000
          initialDelaySeconds: 10  # Delay before the first probe
          periodSeconds: 5  # Frequency of probe
        livenessProbe:
          httpGet:
            path: /healthcheck  # Health check path
            port: 7000
          initialDelaySeconds: 15  # Delay before the first probe
        volumeMounts:
          - name: api-storage
            mountPath: /mnt/efs  # Mount the EFS volume inside the container
          - name: secret-json
            mountPath: /app/config/secrets.json  # Mount the ConfigMap file
            subPath: secrets.json  # Use subPath to map a specific file
      volumes:
        - name: api-storage
          persistentVolumeClaim:
            claimName: sample-pvc  # Use the PVC for storage
        - name: secret-json
          configMap:
            name: secrets-json  # Use the ConfigMap for secrets.json
