service.yml
apiVersion: v1
kind: Service
metadata:
  name: sample-service
spec:
  selector:
    app: sample-api  # This should match the label in the deployment template
  ports:
    - name: sample-port
      protocol: TCP
      port: 8000
      targetPort: sample-port
  type: ClusterIP
