traefik.yaml

# Service for Traefik Dashboard
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: kube-system
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik-dashboard
spec:
  type: LoadBalancer
  ports:
    - name: traefik
      port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik

---

# Ingress Resource for Traefik Dashboard
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: kube-system
  annotations:
    # kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/issuer: letsencrypt-prod  # Reference the ClusterIssuer
spec:
  tls:
    - hosts:
        - localhost  # Using localhost for local testing
      secretName: traefik-cert  # The name of the secret where the certificate will be stored
  rules:
    - host: localhost  # Using localhost for local testing
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-dashboard
                port:
                  number: 9000
