all.yml
# Create a namespace
apiVersion: v1
kind: Namespace
metadata:
  name: irwinrex
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-health-probes
  namespace: irwinrex  # Ensure this matches your deployment namespace
spec:
  endpointSelector:
    matchLabels:
      app: sample-pod  # Match pods with this label
  ingress:
  - fromEntities:
    - all  # Allow traffic from all entities (or specify as needed)
    toPorts:
    - ports:
      - port: "7000"  # Replace with your liveness probe port as a string
        protocol: TCP
      - port: "7000"  # Replace with your readiness probe port as a string
        protocol: TCP

---
# Deployment definition for the sample-api application
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-api
  namespace: irwinrex
spec:
  replicas: 1  # Number of desired replicas
  selector:
    matchLabels:
      app: sample-pod  # Label selector for the pods
  template:
    metadata:
      labels:
        app: sample-pod  # Labels for the pods
        pod: sample-api  # Label for the pod
    spec:
      securityContext:
        runAsUser: 1000  # User ID to run the application
        runAsGroup: 1000  # Group ID to run the application
        fsGroup: 2000  # Group ID for file system permissions
      containers:
      - name: sample-api
        image: dockerrexxzz/sampleapi:latest  # Replace with your Docker image name and tag
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "256Mi"  # Adjust the memory limit as per your requirements
            cpu: "256m"       # Adjust the CPU limit as per your requirements
          requests:
            memory: "125Mi"
            cpu: "100m"
        ports:
          - name: sample-pod-port
            containerPort: 7000  # Application port
        readinessProbe:
          httpGet:
            path: /healthcheck # Health check path
            port: 7000
          initialDelaySeconds: 10  # Delay before the first probe
          periodSeconds: 5  # Frequency of probe
        livenessProbe:
          httpGet:
            path: /healthcheck  # Health check path
            port: 7000
          initialDelaySeconds: 15  # Delay before the first probe
        volumeMounts:
          - name: api-storage
            mountPath: /mnt/efs  # Mount the EFS volume inside the container
          - name: secret-json
            mountPath: /app/config/secrets.json  # Mount the ConfigMap file
            subPath: secrets.json  # Use subPath to map a specific file
      volumes:
        - name: api-storage
          persistentVolumeClaim:
            claimName: sample-pvc  # Use the PVC for storage
        - name: secret-json
          configMap:
            name: secrets-json  # Use the ConfigMap for secrets.json

---
# Service to expose the sample-api application within the cluster
apiVersion: v1
kind: Service
metadata:
  name: sample-service
  namespace: irwinrex
spec:
  selector:
    app: sample-pod  # Match pods with this label
    pod : sample-api # Label selector for the pod
  ports:
    - name: sample-svc-port
      protocol: TCP
      port: 8000  # Service <your-namespace>port
      targetPort: sample-pod-port  # Port on the pod
  type: ClusterIP  # Service type

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-api-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
  - host: sample-ingress.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-service  # Service name to route traffic to
            namespace: irwinrex
            port:
              name: sample-svc-port  # Service port
  tls:
  - hosts:
    - sample-ingress.local
    secretName: tls-secret

# Ingress resource to route traffic to the sample-service
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: sample-ingress
#   namespace: irwinrex
#   annotations:
#     traefik.ingress.kubernetes.io/router.entrypoints: web  # Use the "web" entrypoint in Traefik
# spec:
#   rules:
#     - host: first.itsnota.site  # Replace with your domain or use nip.io for testing
#       http:
#         paths:
#           - path: /
#             pathType: Prefix  # Path type can be Exact or Prefix
#             backend:
#               service:
#                 name: sample-service  # Service name to route traffic to
#                 port:
#                   name: sample-svc-port  # Service port
